--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "bootstrap-vue": "^2.21.1",
-    "core-js": "^3.6.5",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.8.1",
+    "jquery": "^3.5.1",
+    "node": "^15.4.0",
     "query-string": "^6.13.8",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
