--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.1",
+    "element-ui": "^2.14.1",
     "jquery": "^3.5.1",
     "node": "^15.4.0",
     "query-string": "^6.13.8",
