--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "semi": ["error", "always"]
+    }
   },
   "browserslist": [
     "> 1%",
