ui element row of NewAnnounceForm

--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "semi": ["error", "always"]
+      "semi": [
+        "error",
+        "always"
+      ]
     }
   },
   "browserslist": [
