--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.1",
     "element-ui": "^2.14.1",
+    "i18n": "^0.13.2",
     "jquery": "^3.5.1",
     "node": "^15.4.0",
     "query-string": "^6.13.8",
     "vue": "^2.6.12",
     "vue-cli": "^2.9.6",
+    "vue-i18n": "^8.22.2",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
   },
