--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.14.1",
     "i18n": "^0.13.2",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "node": "^15.4.0",
     "query-string": "^6.13.8",
     "vue": "^2.6.12",
